# cosmic-ray-to-mutation-elements-adapter

./: main.py  pyproject.toml
src/cr_to_stryker/: export_stryker_json.py
src/cr_to_stryker/resources/: mutation-testing-elements.js
