[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "cosmic-ray-to-mutation-elements-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cr-to-stryker-report = "cr_to_stryker.export_stryker_json:main"


[tool.setuptools.packages.find]
where = ["src"]